Changelog
=========

1.0.dev0 - (unreleased)
-------------------
- WIP Apply custom style for eionet
  [krisztina]
- Add setup.py
  [krisztina]
- Initial commit
  [krisztina]